welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: type mismatch;
 found   : Any
 required: java.awt.Color
		marquer(T(n-1))
                         ^