welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T = new Array[Any](getMondeHauteur())

def marquer(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse();avance()}

for (i<-1 to getMondeHauteur()) {
	T(i-1) = getCouleurSol()
	avance()
}

def ligne() {
	gauche();avance();droite();avance() //repositionnement
	for (n<-1 to getMondeHauteur()) {
		marquer(T(n-1))
	}
}

for (k<-1 to getMondeLargeur()) {
	ligne()
}

}
